#1: GitHub Actions CI - WIP - addressed CVE-2019-17571 log4j vulnerability warning on GitHub

--- a/call-stack-profiler/pom.xml
+++ b/call-stack-profiler/pom.xml
@@ -31,8 +31,7 @@
         <maven.compiler.plugin.version>3.7.0</maven.compiler.plugin.version>
         <commons.lang3.version>3.9</commons.lang3.version>
         <joda.time.version>2.10.3</joda.time.version>
-        <slf4j.version>1.7.26</slf4j.version>
-        <log4j.version>1.2.17</log4j.version>
+        <log4j.version>2.11.2</log4j.version>
 
         <versions.maven.plugin>2.7</versions.maven.plugin>
         <maven.scm.plugin>1.11.2</maven.scm.plugin>
@@ -59,19 +58,16 @@
         </dependency>
 
         <dependency>
-            <groupId>log4j</groupId>
-            <artifactId>log4j</artifactId>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-bom</artifactId>
             <version>${log4j.version}</version>
+            <type>pom</type>
+            <scope>import</scope>
         </dependency>
         <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-            <version>${slf4j.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-log4j12</artifactId>
-            <version>${slf4j.version}</version>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-to-slf4j</artifactId>
+            <version>${log4j.version}</version>
         </dependency>
 
         <dependency>
